--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,33 @@
   color: white;
   text-align: right;
   border: 1px solid lightgray;
-  width: 194px;
+  font-size: 30px;
+  height: 50px;
+  width: 995px;
 }
 
 .orangeSquare {
   background-color: #f5913e;
   border: 1px solid lightgray;
-  width: 50px;
+  font-size: 30px;
+  height: 50px;
+  width: 250px;
 }
 
 .clearSquare {
   background-color: #e0e0e0;
   border: 1px solid lightgray;
-  width: 50px;
+  font-size: 30px;
+  height: 50px;
+  width: 250px;
 }
 
 .clearSquare2 {
   background-color: #e0e0e0;
   border: 1px solid lightgray;
-  width: 100px;
+  font-size: 30px;
+  height: 50px;
+  width: 500px;
 }
 
 .minus1margin {
